2010-10-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Update.

	* src/dlvhex/GuessCheckModelGenerator.cpp: Sanitize verbose output.
	* src/dlvhex/DLVProcess.cpp: Likewise.

	* src/dlvhex/GraphProcessor.cpp: Add minimality check for
	allLeavesResult before adding to resultModels (ticket #33).

	* examples/minimality.hex: New test for programs with headcycles (ticket #33).
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/minimality.out: Likewise.
	* src/testsuite/dlvhex/TestPlugin.cpp: Likewise.

2010-10-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am: Add builtin_safety2.hex for new DLV
	release 2010-10-14.
	* examples/builtin_safety1.hex: Likewise.
	* examples/builtin_safety2.hex: Likewise.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/builtin_safety1.out: Likewise.
	* examples/tests/builtin_safety2.out: Likewise.

2010-10-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.2.

	* configure.ac: Bump version to 1.7.2.

	* NEWS: Describe changes to 1.7.2.

2010-08-12  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/testsuite/dlvhex/TestPlugin.cpp: Added testcases for newly
	discovered bugs (see also Trac issues #25 #25 #27).
	* examples/rec_agg_bug1.hex: Likewise.
	* examples/rec_agg_bug2.hex: Likewise.
	* examples/rec_agg_bug3.hex: Likewise.

2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Temporary fix for iostreams configure check for
	boost versions >=1.44.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/dlvhex/Makefile.am: Highlight which header file belongs
	to which library.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.

	* configure.ac: Bump version to 1.7.1.

	* NEWS: Describe changes to 1.7.1.

	* MAINTAINER-README: Update.
	* README: Likewise.

2010-07-14  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/ASPSolverManager.h: Revised ASPSolver interface